--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,14 @@ body {
   font-size: 24px;
   color: #f9faf8;
 }
+
+.hero-button {
+  border-radius: 5px;
+  color: white;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 120px;
+  border: 0;
+}
