--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ body {
   min-height: 400px;
 }
 
+.middle-text {
+  font-size: 36px;
+  font-weight: bold;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
+}
+
 .quote-section {
   min-height: 400px;
 }
