--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
 
 .middle-section {
   min-height: 400px;
+  display: flex;
+  flex-direction: column;
 }
 
 .middle-text {
@@ -29,6 +31,33 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
   text-align: center;
+}
+
+.middle-images {
+  min-height: 70%;
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+  align-items: flex-start;
+}
+
+.middle-img-text {
+  width: 140px;
+  height: 200px;
+}
+
+.middle-img {
+  width: 140px;
+  height: 140px;
+  border-style: solid;
+  border-radius: 5%;
+  border-color: #3882f6;
+  margin-bottom: 7px;
+}
+
+.img-subtext {
+  text-align: center;
+  color: grey;
 }
 
 .quote-section {
